--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,9 @@ project 'Runner', {
   'Profile' => :release,
   'Release' => :release,
 }
+# Add the Firebase pods
+pod 'Firebase/Core'
+pod 'Firebase/Auth'
 
 def flutter_root
   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
