--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>703256872060-pr4907t844n7qbdh9356arflnhgu086m.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.703256872060-pr4907t844n7qbdh9356arflnhgu086m</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>703256872060-4cld7jbdr6248424doq89narvj4fiada.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyC9Qnz-wYDEfuR-WbOQkNULK53KSzM74ho</string>
 	<key>GCM_SENDER_ID</key>
@@ -19,15 +21,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>la-moda-2c50c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:703256872060:ios:5413254fee3abf510775f9</string>
 	<key>DATABASE_URL</key>
