--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,7 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
-
+    sdk: flutter  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +41,7 @@ dependencies:
   firebase_messaging: ^14.4.1
   firebase_storage: ^11.2.0
   flutter_cache_manager: ^3.3.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
